--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 html, body {
     position: absolute;
+    background-color: #EFEFEF;
+    color: white;
+    overflow: hidden;
 }
 
 html, body, .layer1, .container {
@@ -11,27 +14,130 @@ html, body, .layer1, .container {
 
 .layer1 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 5px;
-}
-
-.picture h3 {
-    color: beige;
-    text-align: center;
-    background-color: rgba(0,0,0,0.75);
-    padding: 20px 0px;
+    grid-template-columns: 40% 60%;
+    gap: 30px;
 }
 
 
-form {
-    display: block;
-}
-.picture{
+/* Left Side */
+.picture {
     background-image: url("../data/img/mountainBackground.jpg");
+    background-repeat: no-repeat;
     width: 40vw;
     height: 100%;
-    background-size: auto;
-    background-position: center;
+    background-position: 54% 5%;
+    border-right: 2px solid black;
     position: absolute;
+    z-index: 1;
+        /*
+    animation: shiftBackground 3s linear forwards;
+    animation-delay: 2s;*/
 }
 
+.logo {
+    background-color: rgba(0, 0, 0, 0.8);
+    margin-top: 25%;
+    padding: 50px 0px;
+    border: 2px solid red;
+    font-family: 'Macondo', cursive;
+}
+
+.logo h3 {
+    color: beige;
+    text-align: center;
+}
+
+.logo img{
+    height: 50px;
+    width: auto;
+    margin-left: 45%;
+    
+}
+/* Right Side */
+
+.rightSide{
+    background-color: red;
+    margin: 10%;
+    padding: 10%;
+    display: block;
+    align-items: center;
+    box-shadow: rgba(3, 3, 3, 0.25) 0px 54px 55px, rgba(3, 3, 3, 0.12) 0px -12px 30px, rgba(3, 3, 3, 0.12) 0px 4px 6px, rgba(3, 3, 3, 0.17) 0px 12px 13px, rgba(3, 3, 3, 0.09) 0px -3px 5px;
+
+}
+
+.rightSide h4 {
+}
+
+
+.signUpForm {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 0px;
+    
+}
+
+.inputs {
+    width: 100%;
+    margin-left: 35px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 5px;
+
+}
+
+input {
+    width: 65%;
+    height: 2.0em;
+    border-radius: 4px;
+}
+
+.submitBtns{
+    display: block;
+    text-align: center;
+}
+
+button {
+
+    margin: 30px;
+    width: 150px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*.rightSide {
+
+}
+.rightSide h4 {
+    padding-right: 10%;
+}
+.input {
+    margin: 10px;
+    padding: 10px;
+    background-color: aqua;
+    width: 300px;
+    display: block;
+}
+
+label, input {
+    display: block;
+}
+
+button {
+    background-color: bisque;
+}
+
+
+/*
+@keyframes shiftBackground {
+    0% {background-position: 54% 5%;}
+    100% {background-position: 43% 68%;}
+}*/
