--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@ html, body, .layer1, .container {
 /* Right Side */
 
 .rightSide{
-    background-color: red;
+    color: #222;
+    background-color: lightgreen;
     margin: 10%;
     padding: 10%;
     display: block;
@@ -66,7 +67,10 @@ html, body, .layer1, .container {
 }
 
 .rightSide h4 {
+    font-family: 'Macondo', cursive;
+    text-align: center;
 }
+
 
 
 .signUpForm {
@@ -93,51 +97,31 @@ input {
 }
 
 .submitBtns{
-    display: block;
-    text-align: center;
+    margin-left: 35px;
 }
 
 button {
-
+    background-color: #ff0081;
+    box-shadow: rgba(3, 3, 3, 0.25) 0px 54px 55px, rgba(3, 3, 3, 0.12) 0px -12px 30px, rgba(3, 3, 3, 0.12) 0px 4px 6px, rgba(3, 3, 3, 0.17) 0px 12px 13px, rgba(3, 3, 3, 0.09) 0px -3px 5px;
+    border: 0;
     margin: 30px;
     width: 150px;
 }
 
-
-
-
-
-
-
-
-
-
-
-/*.rightSide {
-
-}
-.rightSide h4 {
-    padding-right: 10%;
-}
-.input {
-    margin: 10px;
-    padding: 10px;
-    background-color: aqua;
-    width: 300px;
-    display: block;
+button:hover {
+    transform:scale(1.1);
 }
 
-label, input {
-    display: block;
-}
 
 button {
-    background-color: bisque;
-}
-
-
-/*
-@keyframes shiftBackground {
-    0% {background-position: 54% 5%;}
-    100% {background-position: 43% 68%;}
-}*/
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    background: #91C9FF;
+    outline: none;
+    transition: 1s ease-in-out;
+  }
+  
+  button:hover {
+    transition: 1s ease-in-out;
+  }
